# TranslatAR

./: .env-example  .env.example  .env.example.md  .gitignore  .pre-commit-config.yaml  .secrets.baseline  GOOGLE_OAUTH_SETUP.md  Makefile  README.md  TESTING_GUIDE.md  auth_controller.py  docker-compose.gpu.yml  docker-compose.test.integration.yml  docker-compose.test.unit.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json  test_google_oauth.sh
advice_service/: Dockerfile  README.md  main.py  pyproject.toml
advice_service/tests/: test_advice.py
backend/: .coverage  Dockerfile  README.md  auth_controller.py  config.py  database_client.py  main.py  pyproject.toml  requirements-test.txt  requirements.txt  run_tests.py  security.py  websocket.py
backend/config/: database.py
backend/models/: conversation.py  genadvice.py  history.py  settings.py  summarization.py  translation.py  user.py
backend/routes/: auth.py  auth_testing.py  auth_unity.py  conversations.py  genadvice.py  health.py  history.py  process_audio.py  settings.py  summarization.py  transcripts.py  users.py  websocket.py
backend/security/: auth.py
backend/services/: conversation_service.py  transcript_service.py  user_service.py
backend/static/: login.html
backend/tests/: conftest.py  test_auth.py  test_auth_controller.py  test_auth_integration.py  test_auth_simple_integration.py  test_main.py  test_settings.py  test_websocket_audio.py  test_websocket_endpoint.py
backend/tests/routes/: test_auth.py  test_auth_unity.py  test_history.py  test_process_audio.py  test_settings.py  test_summarization.py  test_transcripts.py  test_users.py  test_websocket_audio.py  test_websocket_endpoint.py
backend/tests/services/: test_transcript_service.py  test_user_service.py
docs/: dev_container.md  developer_guide.python_services.md
scripts/: README.md  clean.sh  docker-compose-manager.sh  format.sh  generate_coverage.sh  generate_dashboard.py  lint.sh  open_unity_editor.sh  parse_unity_results.py  run_all_tests.sh  run_integration_tests.sh  run_unit_tests.sh  run_unity_coverage.sh  run_unity_tests.sh  start.sh  test_code_login.sh
stt-service/: Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
stt-service/tests/: test_main.py
summarization-service/: Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
summarization-service/tests/: test_main.py
tests/integration/: Dockerfile  conftest.py  mock_advice.py  mock_stt.py  mock_translation.py  pyproject.toml  test_advice_integration.py  test_api.py  test_auth_integration.py  test_history.py  test_settings.py  test_transcripts.py  test_ws_realtime.py
translation-service/: Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
translation-service/tests/: test_main.py
unity/: .gitignore  Meta_AR.slnx  README.md  unity.slnx
unity/Assets/: AudioRecordingManager.prefab  BackendConnector.cs  EventSystem.prefab  LanguageUI.prefab  LanguageUIManager.prefab  LoginCanvas.prefab  SettingsCanvas.prefab  SettingsUI.prefab  SettingsUIManager.prefab  WebSocketManager.prefab  _AppManagers.prefab  _AuthManager.prefab
unity/Assets/Editor/: EnvConfigUpdater.cs
unity/Assets/LanguageUI/Scripts/: FaceUser.cs  LanguageUI.asmdef  LanguageUIToggle.cs
unity/Assets/Materials/: CubeShader.mat  SharedMaterial Variant.mat
unity/Assets/Oculus/: OculusProjectConfig.asset
unity/Assets/Plugins/Android/: AndroidManifest.xml
unity/Assets/Prefabs/: AudioRecordingManager.prefab  EventSystem.prefab  LanguageUI.prefab  LanguageUIManager.prefab  LoginCanvas.prefab  WebSocketManager.prefab  _AppManagers.prefab  _AuthManager.prefab
unity/Assets/Resources/: OculusRuntimeSettings.asset
unity/Assets/Scenes/: EnvironmentConfig.asset  MainScene.unity  SampleScene.unity  backup.MainScene.unity
unity/Assets/Scripts/: AudioRecordingManager.cs  BackendConnector.cs  ControllerInput.cs  ERROR_TEST_RESULTS.md  EnvTestService.cs  GoogleSignInConfig.cs  GoogleSignInConfigTest.cs  GoogleSignInManager.cs  GoogleSignInTest.cs  GoogleSignInUI.cs  GoogleSignInWebGL.cs  ManualTestRunner.cs  README_GoogleSignIn.md  Scripts.asmdef  TestButtonScript.cs  TestRunner.cs  TestRunnerButton.cs  UNITY_DEMO_GUIDE.md  UnityGoogleSignInDemo.cs  WebSocketManager.cs
unity/Assets/Scripts/Audio/: RecordingButtonController.cs
unity/Assets/Scripts/Auth/: AuthBackendService.cs  AuthManager.cs  LoginPanelUI.cs
unity/Assets/Scripts/Configuration/: ConfigManager.cs  EnvironmentConfig.cs
unity/Assets/Scripts/LanguageUI/: FaceUser.cs  LanguageDropdownController.cs  LanguageUI.asmdef  LanguageUIToggle.cs
unity/Assets/Scripts/OnOffButtonUI/: OnOffButtonFaceUser.cs  SubtitleToggle.cs  SwitchToggleAnimator.cs  TranslationToggle.cs
unity/Assets/Scripts/Settings/: SettingsButtonController.cs  SettingsMenuUI.cs
unity/Assets/Scripts/SettingsUI/: FontSizeController.cs  OpacityController.cs
unity/Assets/Scripts/Tests/: GoogleSignInConfigTest.cs  (+4 more)
unity/Assets/Settings/: URP-Balanced.asset  UniversalRenderPipelineGlobalSettings.asset
unity/Assets/Tests 1/: Tests 1.asmdef  wei testscript.cs
unity/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
unity/Assets/_Recovery/: 0.unity
unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
web-portal/: .dockerignore  .pretterignore  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
web-portal/public/: audio-processor.js
web-portal/src/: App.test.tsx  App.tsx  AuthContext.tsx  GoogleCallback.tsx  GoogleLoginButton.tsx  GoogleOneTap.tsx  google-auth.tsx  index.css  main.tsx  test-setup.ts  vite-env.d.ts
web-portal/src/api/: auth.ts
web-portal/src/components/: Header.tsx  SettingsMenu.tsx  Summarizer.tsx
web-portal/src/hooks/: useAudioRecorder.ts  useAudiorecorder.test.ts  useTranslationWebSocket.test.ts  useTranslationWebSocket.ts
web-portal/src/models/: GoogleIdTokenPayload.ts  User.ts
web-portal/src/types/: react-google-button.d.ts
web-portal/src/utils/: audioUtils.test.ts  audioUtils.ts  markdown.tsx
(+118 files in other folders)
