[tool.poetry]
name = "advice-service"
version = "0.1.0"
description = "Generate advice microservice for TranslatAR"
authors = ["TranslatAR Dev Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
httpx = "^0.27.0"
pydantic = "^2.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
