[project]
name = "stt-service"
version = "0.1.0"
description = "Speech-to-Text service for TranslatAR"
authors = [
    {name = "TranslatAR Dev Team"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "fastapi (>=0.119.0,<0.120.0)",
    "faster-whisper (>=1.2.0,<2.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
